--- a/MergeConflict-Practice.html
+++ b/MergeConflict-Practice.html
@@ -10,5 +10,6 @@
     <div><h3>Square One</h3></div>
     <div><h3>Square Two</h3></div>
     <div><h3>Square Three</h3></div>
+    <div><h4>square 4</h4></div>
 </body>
 </html>
