--- a/MergeConflict-Practice.html
+++ b/MergeConflict-Practice.html
@@ -7,8 +7,8 @@
     <title>Merge Conflict Practice</title>
 </head>
 <body>
-    <div><h3>Square One</h3></div>
-    <div><h3>Square Two</h3></div>
-    <div><h3>Square Three</h3></div>
+    <div><h3>Square 1</h3></div>
+    <div><h3>Square 2</h3></div>
+    <div><h3>Square 3</h3></div>
 </body>
 </html>
